--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
-langchain==0.0.350
-langchain-google-genai==0.0.5
-langchain-chroma==0.2.4
-chromadb==0.4.18
+langchain>=0.3,<0.4
+langchain-core>=0.3,<0.4
+langchain-google-genai>=2.0,<3.0
+langchain-chroma>=0.1,<0.2
+chromadb>=0.4.18
 google-generativeai==0.3.1
 pandas==2.1.3
 python-multipart==0.0.6
