--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ langchain-core>=0.3,<0.4
 langchain-google-genai>=2.0,<3.0
 langchain-chroma>=0.1,<0.2
 chromadb>=0.4.18
-google-generativeai==0.3.1
+google-generativeai>=0.8.0,<0.9.0  # Updated version range
 pandas==2.1.3
 python-multipart==0.0.6
 PyPDF2==3.0.1
