--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,15 @@
     "react",
     "widget",
     "umd",
-    "ai",
-    "realtyseek"
+    "ai"
   ],
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-org/chatbot-widget.git"
-  },
   "main": "dist/chatbot-widget.js",
   "scripts": {
+    "start": "webpack serve --mode development",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --mode production"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -30,13 +26,15 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^8.4.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^6.0.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.99.7",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^4.15.2"
   },
   "dependencies": {
     "react-markdown": "^10.1.0",
